解决了鼠标框选的bug

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,6 +28,8 @@ body {
     flex-wrap: wrap;
     padding: 10px;
     align-content: flex-start;
+    overflow: auto;
+    position: relative;
 }
 
 .item {
