--- a/templates/index.html
+++ b/templates/index.html
@@ -247,6 +247,7 @@
                         <p class="filename" v-text="filterStr(item.filename)"></p>
                         <p v-text="formatDate(item.create_time)" class="datetime"></p>
                     </div>
+                    <div id="selectDiv" style="position:absolute;width:0;height:0;font-size:0;margin:0;padding:0;border:1px solid #0099FF;background-color:#C3D5ED;z-index:1000;filter:alpha(opacity:60);opacity:0.6;display:none;"></div>
                 </div>
             </main>
         </div>
