--- a/static/css/index.css
+++ b/static/css/index.css
@@ -287,7 +287,7 @@ button:hover {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    width: 20%;
+    width: 300px;
     max-height: 300px;
     overflow: auto;
     box-shadow: 0 0 1px 1px rgba(28, 28, 32, .05), 0 8px 24px rgba(28, 28, 32, .12);
